Add Alchemical Apparatus w/o interface

--- a/src/main/resources/assets/elixir/lang/en_us.json
+++ b/src/main/resources/assets/elixir/lang/en_us.json
@@ -5,5 +5,5 @@
 
   "item.elixir.essence_prima_materia": "Essence of Prima Materia",
 
-  "item.elixir.alchemy_machine": "Alchemy Machine"
+  "block.elixir.alchemical_apparatus": "Alchemical Apparatus"
 }
