Fix Alchemical Apparatus, Add Functionality and Screen Handling

--- a/src/main/resources/assets/elixir/lang/en_us.json
+++ b/src/main/resources/assets/elixir/lang/en_us.json
@@ -4,6 +4,6 @@
   "item.elixir.remnant_shard": "Remnant Shard",
 
   "item.elixir.essence_prima_materia": "Essence of Prima Materia",
-
+  "block.elixir.alchemy_machine": "Alchemy Machine",
   "block.elixir.alchemical_apparatus": "Alchemical Apparatus"
 }
